[gd_scene load_steps=7 format=4 uid="uid://0svo37ggabh1"]

[ext_resource type="Script" uid="uid://b5p0ta81aulw4" path="res://game/environment/environment.gd" id="1_7rhqu"]
[ext_resource type="TileSet" uid="uid://cviwvrin6thhp" path="res://game/environment/environment_tiles.tres" id="2_i45qa"]
[ext_resource type="PackedScene" uid="uid://b16h8ddsl8nux" path="res://game/environment/destructable.tscn" id="3_i45qa"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_i45qa"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_a04gb"]
normal = Vector2(-1, 0)
distance = -640.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_76twd"]
normal = Vector2(0, 1)

[node name="Environment" type="Node2D"]
script = ExtResource("1_7rhqu")

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundTileMapLayer" type="TileMapLayer" parent="Background"]
tile_map_data = PackedByteArray("AAAAAAkAAAAAAAEAAAABAAkAAAAAAAEAAAACAAkAAAAAAAEAAAADAAkAAAAAAAEAAAAEAAkAAAAAAAEAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAMAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAABAAYAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAADAAgAAAAAAAAAAAACAAgAAAAAAAAAAAABAAgAAAAAAAAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAAAAcAAAAAAAAAAAAEAAsAAAAAAAAAAAADAAsAAAAAAAAAAAACAAsAAAAAAAAAAAABAAsAAAAAAAAAAAAAAAsAAAAAAAAAAAAEAAoAAAAAAAEAAAADAAoAAAAAAAEAAAACAAoAAAAAAAEAAAABAAoAAAAAAAEAAAAAAAoAAAAAAAEAAAA=")
tile_set = ExtResource("2_i45qa")

[node name="FinalFences" type="Node2D" parent="Background"]

[node name="FinalFence1" parent="Background/FinalFences" instance=ExtResource("3_i45qa")]
position = Vector2(64, 784)

[node name="FinalFence2" parent="Background/FinalFences" instance=ExtResource("3_i45qa")]
position = Vector2(192, 784)

[node name="FinalFence3" parent="Background/FinalFences" instance=ExtResource("3_i45qa")]
position = Vector2(320, 784)

[node name="FinalFence4" parent="Background/FinalFences" instance=ExtResource("3_i45qa")]
position = Vector2(448, 784)

[node name="FinalFence5" parent="Background/FinalFences" instance=ExtResource("3_i45qa")]
position = Vector2(576, 784)

[node name="Foreground" type="Node2D" parent="."]
z_index = 1

[node name="ForegroundTileMapLayer" type="TileMapLayer" parent="Foreground"]
tile_map_data = PackedByteArray("AAAAAAoAAAAAAAEAAAABAAoAAAAAAAEAAAACAAoAAAAAAAEAAAADAAoAAAAAAAEAAAAEAAoAAAAAAAEAAAAAAAsAAAAAAAAAAAABAAsAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAA=")
tile_set = ExtResource("2_i45qa")

[node name="DefenceFences" type="Node2D" parent="Foreground"]

[node name="DefenceFence1" parent="Foreground/DefenceFences" instance=ExtResource("3_i45qa")]
position = Vector2(64, 980)
monitoring = false

[node name="DefenceFence2" parent="Foreground/DefenceFences" instance=ExtResource("3_i45qa")]
position = Vector2(192, 980)
monitoring = false

[node name="DefenceFence3" parent="Foreground/DefenceFences" instance=ExtResource("3_i45qa")]
position = Vector2(320, 980)
monitoring = false

[node name="DefenceFence4" parent="Foreground/DefenceFences" instance=ExtResource("3_i45qa")]
position = Vector2(448, 980)
monitoring = false

[node name="DefenceFence5" parent="Foreground/DefenceFences" instance=ExtResource("3_i45qa")]
position = Vector2(574, 980)
monitoring = false

[node name="Edges" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="Edges"]
shape = SubResource("WorldBoundaryShape2D_i45qa")

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="Edges"]
shape = SubResource("WorldBoundaryShape2D_a04gb")

[node name="TopCollisionShape2D" type="CollisionShape2D" parent="Edges"]
shape = SubResource("WorldBoundaryShape2D_76twd")
